2008-03-10
	* Numbers_Words: Version 0.16.0 released.
	* Words.php: fixed wrong getLocales() Docblock  bug (#10744) (Daniel O'Connor).
	* Words.php: fixed bogus non-int parsing (#14988) (Daniel O'Connor).
	* Words/lang.cs.php: fixed bad trascription for 101 numbers and 102 thousands bug (#14667) (Daniel O'Connor).
	* Words/lang.fr_BE.php: fixed a bug involving incorrect values for 80 and 81 (Kouber Saparev).
	* Words/lang.pt_BR.php: bug fix (#15260) (Igor Feghali).
	* tests/*: Swap to PHPUnit 3 (Daniel O'Connor).
	* Numerous language unit tests added (bg, en_100, en_gb, en_us, fr, fr_BE, de, it, pt_BR).
	* Fix numerous coding standard issues (bug #15145).

2006-06-12
	* Numbers_Words: Version 0.15.0 released.
	* Words/lang.nl.php: New language file: nl for Dutch (Thanks to WHAM van Dinter)
	* Words/lang.et.php: changed locale name for Estonian language from 'ee' to 'et' (#5618).
	* Words/lang.ru.php: fixed bug in Russian translation (if x modulo 10 was equal to 0) (#6654).
	* Words.php: new Numbers_Words::getLocales() method (Thanks to Bertrand Gugger).
	* tests/test-numbers-words.php: updated to use getLocales().
	* package.xml: updated to version 2.0.

2005-09-19
	* Numbers_Words: Version 0.14.0 released.
	* Words/lang.*.php: added $convert_fraction optional argument that allow to not convert fraction part in toCurrencyWorkds() method.
	* Words/lang.en_GB.php: fixed plural of pence; toCurrency() method added.

2005-03-09
	* Numbers_Words: Version 0.13.1 released.
	* Words.php: Fixed a problem with no leading zero in fraction of the currency value (reported by geekdom at gmail dot com).

2005-02-28
	* Numbers_Words: Version 0.13.0 released.
	* support for a new currency ILS (or NIS) for New Israeli Sheqel

2005-02-15
	* Words/lang.cs.php: New language file: cs for Czech (Thanks to Petr 'PePa' Pavel)

2005-02-03
	* Words/lang.he.php: New language file: he for Hebrew (Thanks to Hadar Porat)

2005-01-11
	* Numbers_Words: Version 0.12.0 released.